# adventofcode2019

./: .gitignore  README.md
Day1/: CMakeLists.txt
Day1-2/: CMakeLists.txt
Day1-2/src/: CMakeLists.txt  day1-2.c
Day1/src/: CMakeLists.txt  day1.c
Day2/2-1/: CMakeLists.txt  compile_commands.json
Day2/2-1/src/: CMakeLists.txt  day2-1.c  prg.c  prg.h
Day2/2-2/: CMakeLists.txt
Day2/2-2/src/: CMakeLists.txt  day2-2.c  prg.c  prg.h
Day3/3-1/: CMakeLists.txt  compile_commands.json
Day3/3-1/src/: CMakeLists.txt  main.c
Day3/3-2/: CMakeLists.txt
Day3/3-2/src/: main.c
Day4/4-1/src/: CMakeLists.txt  main.c
Day4/4-2/src/: main.c
Day5/5-1/src/: main.c
Day5/5-2/: CMakeLists.txt
Day5/5-2/src/: main.c
day6/6-1/: test_in1.txt
day6/6-1/src/: CMakeLists.txt  main.c
day6/6-2/src/: main.c
